kubernetes/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: grafana
  name: grafana
spec:
  rules:
  - host: grafana.yuha0.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
  tls:
  - hosts:
    - grafana.yuha0.com
